src/css/App.css
html {
  width:100%;
  height:100%;
}
body {
  width:100%;
  height:100%;
  padding:0;
  background-color: #f6f6f7; /*rgb(45,45,45)*/ /*#fbe4a1;*/
  font-size:17px;
}

.App {
  text-align: center;
  width:100%;
  height:100%;
  background-color: black;
}

.full-screenable-node { /* make fullscreen background same color as body */
  color: black;
  font-weight: 600;
  height: 100%;
}

.toolbar {
  position: relative;
  z-index:3;
}

/*includes relations, tables, and scrollbar*/
.visualization {
  width:100%;
  height:100%;
  border-right:1px solid white;
  /*overflow: scroll;*/
}

.editorbutton {
  text-align:center;
}

.TextEditor{
  height:100%;
  text-align:center;
  background-color: black;
  /* overflow: scroll; */
}


.Resizer {
  background: black;
  opacity: .2;
  z-index: 1;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -moz-background-clip: padding;
  -webkit-background-clip: padding;
  background-clip: padding-box;
}

.Resizer:hover {
  -webkit-transition: all 2s ease;
  transition: all 2s ease;
}

.Resizer.horizontal {
  height: 11px;
  margin: -5px 0;
  border-top: 5px solid black;
  border-bottom: 5px solid black;
  cursor: row-resize;
  width: 100%;
}

.Resizer.horizontal:hover {
  border-top: 5px solid black;
  border-bottom: 5px solid black;
}

.Resizer.vertical {
  width: 11px;
  margin: 0 -5px;
  border-left: 5px solid black;
  border-right: 5px solid black;
  cursor: col-resize;
}

.Resizer.vertical:hover {
  border-left: 5px solid black;
  border-right: 5px solid black;
}

.Resizer.disabled {
  cursor: not-allowed;
}

.Resizer.disabled:hover {
  border-color: transparent;
}

/*.typeinput {
  width:80%;
  float:left;
}*/
.SplitPane {
  background-color:black;
}
.react-draggable {
 width: 372px;
 }

.back {
  width: 33%;
  height: 200px;
  float: left;
  background-color: #eeeeee;
  border: 10px;
  border-color: #ffffff;
  border-style: solid;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  counter-increment: bc;
  padding: 0px 5px 5px 5px;
}

.back:before {
  content: counter(bc) "_";
  position: absolute;
  padding: 10px;
}

.schemaCode {
  background-color: black;
  /*color: #f6f6f7;*/
  color: rgb(247,247,240);
  margin-top: 5px;
  font-size: 16px;
  width:100%;
  height: 45%;
  overflow: auto;
  position: relative;
  font-family: 'Consolas', 'monaco', monospace;
  border: none;
  /*border: 1px solid #f6f6f7;*/
  border: 1px solid rgb(247,247,240);
  border-radius: .3em;
}


.expressCode {
  background-color: black;
  /*color: #f6f6f7;*/
  color: rgb(247,247,240);
  border-radius: .3em;
  margin-top: 5px;
  font-size: 16px;
  width:100%;
  height: 45%;
  overflow: auto;
  position: relative;
  font-family: 'Consolas', 'monaco', monospace;
  border: none;
  /*border: 1px solid #f6f6f7;*/
  border: 1px solid rgb(247,247,240);
}

.editorTxt {
  /*color:#f6f6f7;*/
  color: rgb(247,247,240);
  font-weight: 600;
  font-size: 1.1rem;
}
.firstShow {
  width:100%;
  height: 100%;
  border-right:1px solid rgb(247,247,240);
}

.textClick {
  padding-top: 380px;
  /*margin-top: 37%;*/
  /*color: #f6f6f7;*/
  color: rgb(247,247,240);
  font-size: 50px;
}
#createTableBtn {
  color: rgb(51,51,51);
  font-weight: bold;
  border: 1px solid black;
  border-radius: 50%;
  background-color: rgba(30,130,76,1);
}

